--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-	"name": "fcc-learn-npm-package-json",
+	"author": "Jane Doe",
+         "name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -12,3 +13,7 @@
 		"url": "https://github.com/freeCodeCamp/boilerplate-npm.git"
 	}
 }
+
+
+
+
